--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
     sdk: flutter
   simple_animations: ^3.1.1
   supercharged: ^2.0.0
-  flutter_villains: ^1.2.1
+  firebase_core: ^0.5.0
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
