--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   supercharged: ^2.0.0
   firebase_core: ^0.5.0
   cloud_firestore:
+  get_storage:
+  get:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
